# empty_proj

./: README.md  appdev.md  cpp.md  python.md  test.html
algorithms/: README.md  array_manip.cpp  count_bubble_sort.cpp  fixed_money_max_toys.cpp  hourglass_sum.cpp  min_swap_sorts.cpp  monte_carlo.py  monte_carlo_exploring.py  on_policy_monte_carlo.py  queue_minimum_bribes.cpp  shift_vector_left.cpp  substring_search.cpp
algorithms/test/: CMakeLists.txt  substring_search.cpp
configs/: bashrc  basic_vimrc  new_setup.sh  ros_setup.md  snap_basic_setup.sh  snap_peripherals_setup.sh  snap_setup.sh  vs_code_settings.json
cpp/design_patterns/: 00_00_curiously_recurring_template_pattern.cpp  00_01_mixin_inheritance.cpp  00_02_single_responsibility_principle.cpp  00_03_open_closed_principle.cpp  00_04_liskov_substitution_principle.cpp  00_05_interface_segregation_principle.cpp  00_06_dependency_inversion_principle.cpp
cpp/design_patterns/09_decorators/: feature.cpp  main.cpp
cpp/example_big_cmake_project/: CMakeLists.txt
cpp/example_big_cmake_project/src/: CMakeLists.txt
cpp/example_gtest/: CMakeLists.txt
cpp/example_gtest/test/: CMakeLists.txt
cpp/topics/: gtest.md  template.md
languages/cpp/: README.md
languages/cpp/example_gtest/src/: main.cpp
languages/cpp/example_protobuf/: CMakeLists.txt  README.md  main.cpp
languages/cpp/example_protobuf/proto/: CMakeLists.txt  example_msg.proto
languages/cpp/example_threading/: CMakeLists.txt
languages/cpp/playground/: .gitignore
languages/cpp/topics/: cmake.md  gtest.md  threads.md
languages/dart/: README.md
languages/javascript/: README.md
languages/python/: README.md  python.md
playground/: CMakeLists.txt
playground/src/templates/: templates.cpp
python/glb_to_models/: glb_to_models.py
python/glb_to_models/templates/: model.config  model.sdf
python/long_name_mesh_from_fuel_collection/: main.py
python/make_photoshoot_worlds/: make_photoshoot_worlds.py
python/make_photoshoot_worlds/templates/: model_photo_shoot.sdf
python/make_thumbnails/: make_thumbnails.py
python/pytorch_ddp/: mnist_example.py
python/random_mesh_from_fuel_collection/: main.py  scale.py
python/scale_mesh/: main.py
python/spdlog/: test.py
python/upload_models/: upload_models.py
python/zenoh/: z_pub.py  z_put.py  z_sub.py
rust/: hashmaps.rs  strings.rs  vectors.rs
rust/aggregator/src/: lib.rs
rust/aggregator_bin/: Cargo.toml
rust/aggregator_bin/src/: main.rs
rust/blog/src/: lib.rs  main.rs
rust/channels/src/: main.rs
rust/errors/src/: main.rs
rust/free_fleet/: Cargo.toml
rust/free_fleet/src/: main.rs  updater.rs
rust/guessing_game/src/: main.rs
rust/gui/src/: lib.rs  main.rs
rust/interview_test/src/: main.rs
rust/largest/src/: main.rs
rust/minigrep/src/: lib.rs  main.rs
rust/mutex/src/: main.rs
rust/paho_pub/: Cargo.toml
rust/paho_pub/src/: main.rs
rust/paho_sub/: Cargo.toml
rust/paho_sub/src/: main.rs
rust/restaurant/src/: lib.rs
rust/test_serde/: Cargo.toml
rust/threads/src/: main.rs
rust/traits/src/: main.rs
rust/web_server/src/: lib.rs  main.rs
rust/zenoh_examples/: Cargo.toml
rust/zenoh_examples/src/: z_get.rs  z_queryable.rs  z_storage.rs
workflows/: appdev.md  docker.md  git.md  webdev.md
(+5 files in other folders)
