[package]
name = "zenoh_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "=1.12.0", default-features = true, features = [
  "attributes",
] }
clap = "3.2.23"
env_logger = "0.10.0"
flume = "0.10.14"
futures = "0.3.25"
git-version = "0.3.5"
json5 = "0.4.1"
log = "0.4.17"
zenoh = { version = "0.7.0-rc", default-features = true }
zenoh-ext = { version = "0.7.0-rc" }

[[bin]]
name = "z_get"
path = "src/z_get.rs"

[[bin]]
name = "z_queryable"
path = "src/z_queryable.rs"

[[bin]]
name = "z_storage"
path = "src/z_storage.rs"

